--- a/Md01_Essenciais de Java/.classpath
+++ b/Md01_Essenciais de Java/.classpath
@@ -6,5 +6,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="src_Estruturas_condicionais_e_de_repeticao"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
